--- a/src/main/webapp/error500.html
+++ b/src/main/webapp/error500.html
@@ -11,7 +11,7 @@
   rel="stylesheet"
   integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
   crossorigin="anonymous" />
-<title>500 ERROR - Sprandoom3</title>
+<title>500 ERROR</title>
 </head>
 <body style="background-color:#FFF450;">
   <div class="container">
