generate assets for sprandoom3

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -30,10 +30,15 @@
     media="(min-device-width: 1024px) and (max-device-width: 1024px) and (-webkit-min-device-pixel-ratio: 2)" />
   <link rel="stylesheet" href="./css/custom-button-group.css" />
   <title>#{msg['META_TITLE']}</title>
-  <script async="async" src="https://www.googletagmanager.com/gtag/js?id=G-KK2V4LTW4K"></script>
+  <script>
+    var nend_params = {"media":16766,"site":358659,"spot":1063424,"type":2,"oriented":1};
+  </script>
+  <script src="https://js1.nend.net/js/nendAdLoader.js"></script>
+  <script async="async"
+    src="https://www.googletagmanager.com/gtag/js?id=G-KK2V4LTW4K"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
+    function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
     gtag('config', 'G-KK2V4LTW4K');
   </script>
@@ -42,11 +47,11 @@
   <b:container>
     <b:form prependId="false">
       <!-- HowToUse Modal HEAD -->
-      <b:modal id="howtouseModal" title="#{msg['LABEL_WHATSTHIS']}">
+      <b:modal id="howtouse-modal" title="#{msg['LABEL_WHATSTHIS']}">
         <p>#{msg['TEXT_HOWTOUSE']}</p>
         <p>
           #{msg['TEXT_CAUTION']}(<a href="https://twitter.com/syakeApps"
-            target="_blank">@syakeApps</a>）
+            target="_blank">@syakeApps</a>)
         </p>
         <f:facet name="footer">
           <b:button value="#{msg['LABEL_CLOSE']}" look="secondary"
@@ -55,34 +60,34 @@
       </b:modal>
       <!-- HowToUse Modal FOOT -->
 
-      <b:row>
+      <b:row id="banner-area">
         <b:column style-class="text-center">
           <img src="./img/banner-640x100.png" class="img-fluid"
             style="max-width: 100%; , height: auto;" alt="Logo Banner" />
         </b:column>
       </b:row>
 
-      <b:row>
+      <b:row id="howtouse-link-area">
         <b:column style-class="text-center">
-          <button type="button" data-target="#howtouseModal" data-toggle="modal"
-            class="btn btn-link">#{msg['LABEL_WHATSTHIS']}</button>
+          <button type="button" data-target="#howtouse-modal"
+            data-toggle="modal" class="btn btn-link">#{msg['LABEL_WHATSTHIS']}</button>
         </b:column>
       </b:row>
 
-      <b:row>
+      <b:row id="weapon-img-area">
         <b:column style-class="text-center">
           <img src="./img/buki/#{BB.pickupedWeapon.id}.png" class="img-fluid"
             alt="Weapon Image" />
         </b:column>
       </b:row>
 
-      <b:row>
+      <b:row id="weapon-name-area">
         <b:column style-class="text-center">
-          <h5>#{BB.pickupedWeapon.getLocaleName(BB.userLocale)}</h5>
+          <h5>#{BB.pickupedWeapon.getLocalizedName(BB.userLocale)}</h5>
         </b:column>
       </b:row>
 
-      <b:row>
+      <b:row id="setting-panel-area">
         <b:column col-lg="3" col-md="3" />
         <b:column col-lg="6" col-md="6">
           <b:panel title="#{msg['LABEL_SETTING']}" collapsed="true">
@@ -92,7 +97,7 @@
               non-selected-text="#{msg['LABEL_NO_SELECTED']}"
               size="#{APP.classes.size()}">
               <f:selectItems value="#{APP.classes}" var="c" itemValue="#{c.id}"
-                itemLabel="#{c.getLocaleName(BB.userLocale)}" />
+                itemLabel="#{c.getLocalizedName(BB.userLocale)}" />
             </b:selectMultiMenu>
             <b:formGroup>
               <h:outputLabel value="#{msg['LABLE_SUB']}" for="sub" />
@@ -100,7 +105,7 @@
                 <f:selectItem itemLabel="#{msg['LABEL_NO_SELECTED']}"
                   itemValue="0" />
                 <f:selectItems value="#{APP.subs}" var="s" itemValue="#{s.id}"
-                  itemLabel="#{s.getLocaleName(BB.userLocale)}" />
+                  itemLabel="#{s.getLocalizedName(BB.userLocale)}" />
               </b:selectOneMenu>
             </b:formGroup>
             <b:formGroup>
@@ -110,7 +115,7 @@
                   itemValue="0" />
                 <f:selectItems value="#{APP.specials}" var="s"
                   itemValue="#{s.id}"
-                  itemLabel="#{s.getLocaleName(BB.userLocale)}" />
+                  itemLabel="#{s.getLocalizedName(BB.userLocale)}" />
               </b:selectOneMenu>
             </b:formGroup>
           </b:panel>
@@ -118,13 +123,12 @@
         <b:column col-lg="3" col-md="3" />
       </b:row>
 
-      <b:row>
+      <b:row id="randomize-btn-area">
         <b:column col-lg="3" col-md="3" />
         <b:column col-lg="6" col-md="6" style-class="text-center">
           <h:commandButton styleClass="btn btn-primary btn-block"
             value="#{msg['LABEL_RANDOMIZE']}"
             actionListener="#{BB.randomizeWeapon()}" />
-
         </b:column>
         <b:column col-lg="3" col-md="3" />
       </b:row>
